[workspace]
resolver = "2"

members = [
	"bin/node-template/node",
	"bin/node-template/pallets/template",
	"bin/node-template/runtime",
	"bin/node/bench",
	"bin/node/cli",
	"bin/node/test-runner-example",
	"bin/node/executor",
	"bin/node/primitives",
	"bin/node/rpc",
	"bin/node/rpc-client",
	"bin/node/runtime",
	"bin/node/testing",
	"bin/utils/chain-spec-builder",
	"bin/utils/subkey",
	"client/api",
	"client/authority-discovery",
	"client/basic-authorship",
	"client/beefy",
	"client/beefy/rpc",
	"client/block-builder",
	"client/chain-spec",
	"client/chain-spec/derive",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/babe",
	"client/consensus/babe/rpc",
	"client/consensus/common",
	"client/consensus/epochs",
	"client/consensus/manual-seal",
	"client/consensus/pow",
	"client/consensus/slots",
	"client/consensus/uncles",
	"client/db",
	"client/executor",
	"client/executor/common",
	"client/executor/runtime-test",
	"client/executor/wasmi",
	"client/executor/wasmtime",
	"client/finality-grandpa",
	"client/informant",
	"client/keystore",
	"client/light",
	"client/network",
	"client/network-gossip",
	"client/network/test",
	"client/offchain",
	"client/peerset",
	"client/allocator",
	"client/proposer-metrics",
	"client/rpc",
	"client/rpc-api",
	"client/rpc-servers",
	"client/service",
	"client/service/test",
	"client/state-db",
	"client/sync-state-rpc",
	"client/telemetry",
	"client/tracing",
	"client/tracing/proc-macro",
	"client/transaction-pool",
	"client/transaction-pool/api",
	"client/utils",
	"frame/assets",
	"frame/atomic-swap",
	"frame/aura",
	"frame/authority-discovery",
	"frame/authorship",
	"frame/babe",
	"frame/balances",
	"frame/beefy",
	"frame/beefy-mmr",
	"frame/beefy-mmr/primitives",
	"frame/benchmarking",
	"frame/bounties",
	"frame/collective",
	"frame/contracts",
	"frame/contracts/rpc",
	"frame/contracts/rpc/runtime-api",
	"frame/democracy",
	"frame/try-runtime",
	"frame/elections",
	"frame/election-provider-multi-phase",
	"frame/election-provider-support",
	"frame/example",
	"frame/example-offchain-worker",
	"frame/example-parallel",
	"frame/executive",
	"frame/gilt",
	"frame/grandpa",
	"frame/identity",
	"frame/im-online",
	"frame/indices",
	"frame/lottery",
	"frame/membership",
	"frame/merkle-mountain-range",
	"frame/merkle-mountain-range/primitives",
	"frame/merkle-mountain-range/rpc",
	"frame/multisig",
	"frame/nicks",
	"frame/node-authorization",
	"frame/offences",
	"frame/proxy",
	"frame/randomness-collective-flip",
	"frame/recovery",
	"frame/scheduler",
	"frame/scored-pool",
	"frame/session",
	"frame/session/benchmarking",
	"frame/society",
	"frame/staking",
	"frame/staking/reward-curve",
	"frame/staking/reward-fn",
	"frame/sudo",
	"frame/support",
	"frame/support/procedural",
	"frame/support/procedural/tools",
	"frame/support/procedural/tools/derive",
	"frame/support/test",
	"frame/system",
	"frame/system/benchmarking",
	"frame/system/rpc/runtime-api",
	"frame/timestamp",
	"frame/transaction-payment",
	"frame/transaction-payment/rpc",
	"frame/transaction-payment/rpc/runtime-api",
	"frame/transaction-storage",
	"frame/treasury",
	"frame/tips",
	"frame/uniques",
	"frame/utility",
	"frame/vesting",
	"frame/bags-list",
	"primitives/api",
	"primitives/api/proc-macro",
	"primitives/api/test",
	"primitives/application-crypto",
	"primitives/application-crypto/test",
	"primitives/arithmetic",
	"primitives/arithmetic/fuzzer",
	"primitives/authority-discovery",
	"primitives/authorship",
	"primitives/beefy",
	"primitives/block-builder",
	"primitives/blockchain",
	"primitives/consensus/aura",
	"primitives/consensus/babe",
	"primitives/consensus/common",
	"primitives/consensus/pow",
	"primitives/consensus/vrf",
	"primitives/core",
	"primitives/database",
	"primitives/debug-derive",
	"primitives/externalities",
	"primitives/finality-grandpa",
	"primitives/inherents",
	"primitives/io",
	"primitives/keyring",
	"primitives/keystore",
	"primitives/maybe-compressed-blob",
	"primitives/npos-elections",
	"primitives/npos-elections/solution-type",
	"primitives/npos-elections/fuzzer",
	"primitives/offchain",
	"primitives/panic-handler",
	"primitives/rpc",
	"primitives/runtime",
	"primitives/runtime-interface",
	"primitives/runtime-interface/proc-macro",
	"primitives/runtime-interface/test",
	"primitives/runtime-interface/test-wasm",
	"primitives/runtime-interface/test-wasm-deprecated",
	"primitives/sandbox",
	"primitives/serializer",
	"primitives/session",
	"primitives/staking",
	"primitives/state-machine",
	"primitives/std",
	"primitives/storage",
	"primitives/tasks",
	"primitives/test-primitives",
	"primitives/timestamp",
	"primitives/tracing",
	"primitives/transaction-pool",
	"primitives/transaction-storage-proof",
	"primitives/trie",
	"primitives/version",
	"primitives/version/proc-macro",
	"primitives/wasm-interface",
	"test-utils/client",
	"test-utils/derive",
	"test-utils/runtime",
	"test-utils/runtime/client",
	"test-utils/runtime/transaction-pool",
	"test-utils/test-runner",
	"test-utils/test-crate",
	"utils/build-script-utils",
	"utils/fork-tree",
	"utils/frame/benchmarking-cli",
	"utils/frame/remote-externalities",
	"utils/frame/frame-utilities-cli",
	"utils/frame/try-runtime/cli",
	"utils/frame/rpc/support",
	"utils/frame/rpc/system",
	"utils/frame/generate-bags",
	"utils/frame/generate-bags/node-runtime",
	"utils/prometheus",
	"utils/wasm-builder",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
[patch."https://github.com/paritytech/substrate"]
node-template ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-benchmarking ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-support ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-support-procedural ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-support-procedural-tools ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-support-procedural-tools-derive ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-arithmetic ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-debug-derive ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-std ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-core ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-externalities ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-storage ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-runtime-interface ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-runtime-interface-proc-macro ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-tracing ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-wasm-interface ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-io ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-keystore ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-state-machine ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-panic-handler ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-trie ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-runtime ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-application-crypto ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-api-proc-macro ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-version ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-version-proc-macro ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-test-primitives ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-runtime-client ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-block-builder ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-client-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-prometheus-endpoint ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-executor ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-executor-common ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-allocator ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-maybe-compressed-blob ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-serializer ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-executor-wasmi ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-executor-wasmtime ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-runtime-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-sandbox ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-tasks ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-wasm-builder ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-tracing ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-rpc-server ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-tracing-proc-macro ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-blockchain ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-consensus ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-inherents ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-database ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-runtime ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-system ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-system-rpc-runtime-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-babe ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-authorship ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-authorship ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-session ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-timestamp ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-timestamp ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-session ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-staking ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-consensus-babe ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-consensus-slots ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-consensus-vrf ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-election-provider-support ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-npos-elections ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-npos-elections-solution-type ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-utils ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-utils-derive ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-service ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-chain-spec ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-chain-spec-derive ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-network ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
fork-tree ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-utils ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-peerset ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-finality-grandpa ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-telemetry ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-client-db ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-state-db ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-informant ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-transaction-pool-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-keystore ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-light ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-offchain ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-offchain ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-transaction-pool ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-transaction-pool ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-runtime-transaction-pool ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-rpc-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-block-builder ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-transaction-storage-proof ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-balances ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-transaction-payment ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-offences ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-staking ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-bags-list ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-staking-reward-curve ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-consensus-aura ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-keyring ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-client ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-runtime-interface-test-wasm ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-benchmarking-cli ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-cli ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-template-runtime ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-executive ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-system-benchmarking ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-aura ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-grandpa ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-randomness-collective-flip ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-sudo ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-template ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-transaction-payment-rpc-runtime-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-transaction-payment-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-basic-authorship ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-proposer-metrics ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-aura ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-slots ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-network-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-finality-grandpa ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-network-gossip ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-frame-rpc-system ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-build-script-utils ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-bench ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-primitives ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-runtime ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-try-runtime ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-assets ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-authority-discovery ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-authority-discovery ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-bounties ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-treasury ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-collective ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-contracts ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-contracts-primitives ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-contracts-proc-macro ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-utility ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-contracts-rpc-runtime-api ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-democracy ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-scheduler ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-election-provider-multi-phase ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-elections-phragmen ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-gilt ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-identity ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-im-online ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-indices ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-lottery ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-support-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
frame-support-test-pallet ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-membership ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-mmr ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-mmr-primitives ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-multisig ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-offences-benchmarking ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-proxy ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-recovery ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-session-benchmarking ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-society ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-tips ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-transaction-storage ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-uniques ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-vesting ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-testing ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-executor ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-cli ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-inspect ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-contracts-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-mmr-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-babe ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-epochs ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-babe-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-finality-grandpa-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-sync-state-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-authority-discovery ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-uncles ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
try-runtime-cli ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
remote-externalities ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-service-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-frame-cli ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
test-runner-example ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-manual-seal ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
test-runner ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-rpc-client ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
chain-spec-builder ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
subkey ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
beefy-gadget ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
beefy-primitives ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
beefy-gadget-rpc ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sc-consensus-pow ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-consensus-pow ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-atomic-swap ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-beefy ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-beefy-mmr ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
beefy-merkle-tree ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-elections ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-example ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-example-offchain-worker ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-example-parallel ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-nicks ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-node-authorization ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-scored-pool ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
pallet-staking-reward-fn ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-api-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-application-crypto-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-arithmetic-fuzzer ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-npos-elections-fuzzer ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-runtime-interface-test ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
sp-runtime-interface-test-wasm-deprecated ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-test-utils-test-crate ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
substrate-frame-rpc-support ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
generate-bags ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
node-runtime-generate-bags ={git = "https://github.com/gilescope/substrate.git" ,branch = "giles-upgrade-schnorrkel" }
